# dispatcherd

./: .flake8  .gitignore  Makefile  README.md  conftest.py  dispatcher.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements_dev.txt  run_demo.py  run_dispatcher.py  schema.json  sonar-project.properties
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  sonarcloud.yml
ansible_dispatcher/: cli.py  control.py  main.py  pool.py  publish.py  registry.py
ansible_dispatcher/producers/: base.py  brokered.py  scheduled.py
ansible_dispatcher/worker/: task.py
asyncio_tests/: test_noop_broker.py
asyncio_tests/integration/: conftest.py  test_disruptions.py  test_main.py  test_metrics_use.py  test_pool.py  test_producers.py  test_signal_handling.py  test_socket_use.py  test_worker_signals.py
asyncio_tests/unit/: test_brokers_async.py  test_chunking.py  test_connection_saver.py  test_noop_broker_async.py
dispatcher/: __init__.py  cli.py  config.py  constants.py  control.py  factories.py  main.py  pool.py  process.py  protocols.py  publish.py  registry.py  tasks.py  utils.py
dispatcher/brokers/: __init__.py  base.py  pg_notify.py  socket.py
dispatcher/producers/: __init__.py  base.py  brokered.py  on_start.py  scheduled.py
dispatcher/service/: asyncio_tasks.py  blocker.py  control_tasks.py  delayer.py  main.py  next_wakeup_runner.py  pool.py  process.py  queuer.py  scaler.py  tasks.py
dispatcher/testing/: __init__.py  subprocess.py
dispatcher/worker/: task.py
dispatcherd/: __init__.py  cli.py  config.py  control.py  factories.py  protocols.py  publish.py  registry.py  utils.py
dispatcherd/brokers/: __init__.py  error_only.py  noop.py  pg_notify.py  socket.py
dispatcherd/processors/: blocker.py  delayer.py  params.py  queuer.py
dispatcherd/producers/: base.py  brokered.py  on_start.py  scheduled.py
dispatcherd/service/: asyncio_tasks.py  blocker.py  control_tasks.py  coverage_probe.py  custom_http_server.py  delayer.py  main.py  memory_inspect.py  metrics.py  next_wakeup_runner.py  pool.py  process.py  queuer.py
dispatcherd/testing/: asyncio.py  producers.py  subprocess.py
dispatcherd/utils/: __init__.py  chunking.py  task_serialization.py
dispatcherd/worker/: target.py  task.py
docs/: config.md  contributing.md  design_notes.md  message_formats.md  roadmap.md  signal_guidance.md  submit_task.md  task_options.md  vision.md  worker_locking.md  worker_statuses.md
test_work/: __init__.py  math.py
tests/: conftest.py  test_noop_broker.py
tests/benchmark/: conftest.py  test_control.py  test_full_server.py
tests/data/: callbacks.py  methods.py
tests/integration/: conftest.py  test_bind.py  test_callable_queues.py  test_client.py  test_control_tasks.py  test_disruptions.py  test_main.py  test_metrics_use.py  test_pool.py  test_pool_sigterm.py  test_producers.py  test_signal_handling.py  test_socket_use.py  test_worker_callbacks.py  test_worker_selection.py
tests/testing/: test_debug_brokers.py
tests/unit/: conftest.py  test_broker_callbacks.py  test_brokers.py  test_chunking.py  test_config.py  test_factories.py  (+8 more)
tools/: gen_schema.py  test_methods.py  write_messages.py
(+30 files in other folders)
