[project.urls]
Repository = "https://github.com/ansible/dispatcher"

[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "dispatcher"
version = "0.1.0"
description = "An asyncio-based dispatcher for tasks in a worker pool."
readme = "README.md"
authors = [{ name = "Alan Rominger", email = "arominge@redhat.com.com" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["asyncio", "multiprocessing", "dispatcher", "pg_notify", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["pyyaml"]
dynamic = ["version"]

[project.scripts]
dispatcherd = "dispatcher.cli:standalone"
dispatcherctl = "dispatcher.cli:control"

[tool.setuptools.packages.find]
include = ["dispatcher*"]

[tool.setuptools]
include-package-data = true # Ensures package data is included

[tool.setuptools.package-data]
"dispatcher" = ["LICENSE", "README.md"]

# You need psycopg, but this will not help you to install it

# Linters coppied from django-ansible-base, exceptions removed

[tool.setuptools_scm]
version_scheme = "calver-by-date"
local_scheme = "no-local-version"

[tool.black]
line-length = 160
fast = true
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 160

[project.optional-dependencies]
pg_notify = ["psycopg[binary]>=3.2.0"]

[tool.pytest.ini_options]
log_cli_level = "DEBUG"
